fix(form overlay): fix scrolling problem with covering

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -7,7 +7,7 @@
 }
 
 .form__overlay {
-  position: absolute;
+  position: fixed;
   z-index: 3;
   top: 0;
   left: 0;
@@ -21,7 +21,7 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   background-color: #fff;
   color: #000;
   top: 50%;
@@ -81,7 +81,7 @@
   width: 40px;
   height: 40px;
   z-index: 5;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(215px, -205px) rotate(180deg);
